--- a/presentation.tex
+++ b/presentation.tex
@@ -1,7 +1,8 @@
 \documentclass[aspectratio=169,10pt]{beamer}
 \mode<presentation>
 {
-  \usetheme{Copenhagen}
+  %%\usetheme{Copenhagen}
+  \usetheme{Warsaw}
   \setbeamercovered{transparent}
 }
 
@@ -82,7 +83,7 @@
     \item Son instanciadas mediante la definici\'on de variables.
     \item Tienen tres secci\'ones:
         \begin{enumerate}
-            \item Definiciones
+            \item \only<2->{Definiciones}
             \item Ecuaciones
             \item Sentencias
         \end{enumerate}
