--- a/presentation.tex
+++ b/presentation.tex
@@ -60,8 +60,6 @@
 
 \section{Introducci\'on a Modelica}
 
-
-
 \begin{frame}{Modelica} 
     \begin{itemize}
         \item Orientado a Objetos.
@@ -83,9 +81,9 @@
     \item Son instanciadas mediante la definici\'on de variables.
     \item Tienen tres secci\'ones:
         \begin{enumerate}
-            \item \only<2->{Definiciones}
-            \item Ecuaciones
-            \item Sentencias
+            \item Definiciones.
+            \item Ecuaciones.
+            \item Sentencias.
         \end{enumerate}
 \end{itemize}
 
@@ -145,4 +143,246 @@ Prefijos de clase: \textit{model}, \textit{record}, \textit{block}, \textit{conn
 \end{columns}
 \end{frame}
 
+\begin{frame}[fragile]
+\frametitle{Herencias de Clases} 
+\begin{columns}  
+\column[t]{.5\textwidth}  
+
+\begin{itemize}
+    \item Agrega significado semantico al modelo.
+    \item Facilita la reutilizaci\'on de c\'odigo.
+    \item Se utiliza la palabra reservada: \textit{extends}.
+\end{itemize} 
+
+\column[t]{.5\textwidth}  
+\begin{lstlisting}[style=base]
+model OnePort
+    Pin p;
+    Pin n;
+    Real v;
+    Real i;
+equation
+    v = p.v - n.v;
+    i = p.i;
+    i = -n.i;
+end OnePort;
+model Capacitor
+    @extends@ OnePort;
+    parameter Real C = 1;
+equation
+    C * der(v) = i;
+end Capacitor;
+\end{lstlisting}
+\end{columns}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{Declaraciones de tipo} 
+\begin{columns}  
+\column[t]{8cm}
+    \begin{itemize}
+        \item Tipos b\'asicos: \textit{Real}, \textit{Integer}, \textit{Boolean} y \textit{String}
+        \item Las clases definen un nuevo tipo.
+        \item Sin\'onimos de tipos: \\ 
+              type Nombre = [Prefijos] Tipo-Existente [Array] [Modificaciones]
+    \end{itemize} 
+
+Prefijos de Tipo: \textit{flow}, \textit{constant}, \textit{parameter}, \textit{discrete}, \textit{input} y \textit{output}.
+
+\column[t]{5cm}
+\begin{lstlisting}[style=base]
+package Circuits
+    type Current = flow Real;
+    type Voltage = Real;
+    connector Pin
+        Voltage v;
+        Current i;
+    end Pin;
+    type TenPin = Pin[10];
+end Circuits;
+\end{lstlisting}
+\par
+\end{columns}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{Definiciones de variables} 
+\begin{enumerate}
+\item \textbf{Prefijos de tipos}: \textit{flow}, \textit{constant}, \textit{parameter}, \textit{discrete}, \textit{input} y \textit{output}.
+\item \textbf{Tipo}: Nombre del tipo de la variable. Puede ser un tipo b\'asico, una clase o un sin\'onimo de tipo.  Ejemplo: \textit{Real}, \textit{String}, \textit{Pin}, \textit{TenPin}.
+\item \textbf{Nombre de la variable}. 
+\item \textbf{Dimensi\'on}: Modelica permite la definici\'on de arreglos.
+\item \textbf{Modificaciones}.
+\end{enumerate}
+\begin{lstlisting}[style=base]
+    type TenPin = Pin[10];  
+    
+    TenPin pines;
+    Pin pines2 [10];
+\end{lstlisting}
+\par
+
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{Modificaciones} 
+
+\begin{columns}  
+\column[T]{7cm}
+Aparecen en: 
+\begin{enumerate}
+    \item Declaraciones de variables.
+    \item Sin\'onimo de tipo.
+    \item Definiciones de herencia.
+\end{enumerate} 
+
+Se permite:
+\begin{enumerate}
+    \item Cambiar el valor inicial de una variable.
+    \item Anidar modificaciones.
+    \item Alterar la definici\'on de una variable.
+    \item Cambiar la definici\'on de un tipo.
+\end{enumerate}
+\column[T]{7cm}
+\begin{lstlisting}[style=base]
+package Circuits
+    model CircuitX
+        Capacitor cap;
+        Resistor res;
+        ...
+    equation 
+    
+    ...
+        
+    end CircuitX;
+    model MainCircuit
+        Capacitor x(C = 2);
+        CircuitOne co1 (cap(C = 10));
+        CircuitOne co2 (cap(C = 15));
+    end MainCircuit;
+end Circuits;
+\end{lstlisting}
+
+ 
+\end{columns}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{Ecuaciones de igualdad} 
+
+Las ecuaciones no representan una asignaci\'on, sino igualdades. Pueden tener expresiones complejas de ambos lados de la igualdad y expresan una relaci\'on entre las variables. Se definen dentro de la secci\'on \textit{equation}.
+
+\begin{columns}  
+\column[t]{8cm}
+Igualdades
+\begin{lstlisting}[style=base]
+    p.v - n.v = v;
+    i = p.i;
+    i = -n.i;
+\end{lstlisting} 
+\column[t]{5cm}
+Ecuac\'on For
+\begin{lstlisting}[style=base]
+    for i in 1:N loop
+        v[i] = p[i].v - n[i].v;
+        i[i] = p[i].i;
+        i[i] = -n[i].i;
+        C[i] * der(v[i]) = i;
+    end for;
+\end{lstlisting} 
+\end{columns}
+
+
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{Ecuaciones Connect} 
+Los conectores:
+\begin{itemize}
+\item Son clases con ciertas restricciones.
+\item Se definen con el prefijo \textit{connector}.
+\item No tienen ecuaciones.
+\item Tienen variables de dos tipos:
+	\begin{enumerate}
+		\item Variables de potencial. Ejemplo: presi\'on, voltaje, etc. 
+		\item Variables de flujo: definidas con el prefijo flow. Ejemplo: corriente, caudal, etc.
+	\end{enumerate}
+\item Ejemplo: Clase \textit{Pin}.
+\end{itemize}
+
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{Ecuaciones Connect} 
+Las ecuaciones \textit{connect}: 
+\begin{itemize}
+\item Conectan dos clases del mismo tipo.
+\item Genera relaciones entre las variables internas de los conectores:
+\begin{itemize}
+\item Las variables de potencial dentro de una misma conexi\'on deben ser iguales entre s\'i.
+\item Las variables de flujo siguen las reglas de Kirchhoff: la suma de los flujos es igual a cero. Para mantener esta regla hay que considerar como flujo positivo aquel que tenga direcci\'on hacia dentro del componente. En caso contrario, ser\'a considerado negativo. 
+\end{itemize}
+\end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]
+\frametitle{Ecuaciones Connect} 
+\begin{columns}  
+\column[T]{6cm}
+ \begin{lstlisting}[style=base]
+	package Circuits
+		...
+		model ground
+			Pin p;
+		equation
+			p.v = 0;
+		end ground;
+		model inductor
+			extends OnePort;
+			parameter Real L = 1;
+		equation
+			L * der(i) = v;
+		end inductor;
+		model LC_circuit
+			Capacitor cap(v(start = 1));
+			inductor ind(L = 2);
+			ground gr;
+		equation
+			connect(ind.p,cap.p);
+			connect(ind.n,cap.n);
+			connect(cap.n,gr.p);
+		end LC_circuit;
+	end Circuits
+\end{lstlisting}
+\column[T]{6cm}
+ \begin{lstlisting}[style=base]
+	// Variables de Potencial
+	ind.p.v = cap.p.v;
+	ind.n.v  = cap.n.v;
+	cap.n.v = gr.p.v;
+	
+	// Variables de flujo
+	ind.p.i + cap.p.i = 0;
+	ind.n.i + cap.n.i + gr.p.i = 0;
+\end{lstlisting}
+\end{columns}
+\end{frame}
+
 \end{document}
+
+
+
+
+\begin{comment}
+
+\begin{frame}[fragile]
+\frametitle{Declaraciones de variables} 
+\begin{columns}  
+\column[t]{8cm}
+ 
+\column[t]{5cm}
+ 
+\end{columns}
+\end{frame}
+
+\end{comment}
