--- a/presentation.tex
+++ b/presentation.tex
@@ -30,7 +30,8 @@
                     numberstyle=\tiny, numbersep=5pt,
                     breaklines=true,
                     tabsize=2, captionpos=b , stepnumber=1 , aboveskip=20pt,
-                    moredelim=**[is][\color{red}]{@}{@}
+                    moredelim=**[is][\color{red}]{@}{@},
+                    moredelim=**[is][\color{blue}]{@2}{@}
         }
 
 \title{Aplanado eficiente de grandes modelos Modelica}
@@ -404,13 +405,6 @@ Las ecuaciones \textit{connect}:
 \end{center}
 }
 \end{frame}
-
-
-\begin{comment}
-
-comentar los problemas de otros compiladores y que vamos hacer nosostros.
-
-\end{comment}
 
 
 \input{cap3}
